# home-assistant-tray

./: index.html  package.json  pnpm-lock.yaml  prefs.html  run  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  prefs.css  prefs.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ha_ws.rs  lib.rs  state.rs  tray.rs
