[package]
name = "ha-tray"
version = "0.1.0"
description = "Home Assistant system tray application"
authors = ["FalconNL93"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ha_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }

